Stylesheet/emote/tag updates 2014-10-14

--- a/source-css/berrytrain.css
+++ b/source-css/berrytrain.css
@@ -365,8 +365,8 @@ background:url(%%BerryMail%%);
 .author[href$="/KillerRabbit1253"]:before {content: 'King Queen ' ;}
 .author[href$="/KillerRabbit1253"]:after {content: ' is the princess of ice cream, BerryTrain, and Boxy ' ;}
 .author[href$="/CrystalLord"]:after {content: ' of lording crystals' ;}
-
-
+.author[href$="aly411"]:before {content: ' ';}
+.author[href$="/aly411"]:after {content: ' the rose queen';}
 .author[href$="HonorInDefeat"]:after {content: ' of Disney Songs' ;}
 
 /* STYLESHEET EMOTES */
