--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -81,8 +81,8 @@ div.titlebox .users-online span.number:after {content:" Learning about Friendshi
 {
  background:url(%%searchbar-spike%%) top left no-repeat!important;
  padding:13px 2px 13px 50px!important;
- height:22px!important;
- width:245px!important
+ /*height:50px!important;
+ width:300px!important*/
 }
 
 div.over18 .entry .buttons .first{padding-left: 0px}
@@ -94,7 +94,7 @@ div.over18 .entry .buttons .first{padding-left: 0px}
  background-position:right bottom;
  background-color:transparent;
  border:1px dotted black;
- height:100px!important
+ height:120px!important
 }
 .sidecontentbox h1{text-align:left}
 
@@ -598,7 +598,9 @@ a[href|="/rajlie"],a[href|="/ra00"],a[href|="/rpriceless"],a[href|="/ra10"],a[hr
     transform: scaleX(-1);
 }
 
-a[href|="/twipride"],a[href|="/a01"],a[href|="/rtwipride"],a[href|="/ra01"],a[href|="/ajcower"],a[href|="/b01"],a[href|="/rajcower"],a[href|="/rb01"],a[href|="/twismug"],a[href|="/c01"],a[href|="/rtwismug"],a[href|="/rc01"],a[href|="/lyra"],a[href|="/l00"],a[href|="/e01"],a[href|="/rlyra"],a[href|="/rl00"],a[href|="/re01"],a[href|="/rswagintosh"],a[href|="/ra24"],.flair-pinkiepie,.side .md table tr:nth-of-type(3) td:nth-of-type(2):after
+a[href|="/swagintosh"],a[href|="/a24"],a[href|="/rswagintosh"],a[href|="/ra24"]{background-position:0 0 !important}
+
+a[href|="/twipride"],a[href|="/a01"],a[href|="/rtwipride"],a[href|="/ra01"],a[href|="/ajcower"],a[href|="/b01"],a[href|="/rajcower"],a[href|="/rb01"],a[href|="/twismug"],a[href|="/c01"],a[href|="/rtwismug"],a[href|="/rc01"],a[href|="/lyra"],a[href|="/l00"],a[href|="/e01"],a[href|="/rlyra"],a[href|="/rl00"],a[href|="/re01"],.flair-pinkiepie,.side .md table tr:nth-of-type(3) td:nth-of-type(2):after
 {background-position:0 -100%}
 
 a[href|="/lunateehee"],a[href|="/a02"],a[href|="/rlunateehee"],a[href|="/ra02"],a[href|="/fluttersrs"],a[href|="/b02"],a[href|="/rfluttersrs"],a[href|="/rb02"],a[href|="/ohhi"],a[href|="/c02"],a[href|="/rohhi"],a[href|="/rc02"],a[href|="/cutealoo"],a[href|="/e02"],a[href|="/rcutealoo"],a[href|="/re02"],.flair-luna,.side .md table tr:nth-of-type(5) td:nth-of-type(2):after
