--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -435,7 +435,7 @@ a[href|="/rarityparanoid"], a[href|="/rarinoid"], a[href|="/flutterfreaked"], a[
 {background-image:url(%%100x100b%%);width:100px;height:100px;display:block;float:left;}
 
 /* 100x100c 'motes */
-a[href|="/sadbot"], a[href|="/trixiecrazy"]
+a[href|="/sadbot"], a[href|="/trixiecrazy"], a[href|="/wheredidthemuffingo"]
 {background-image:url(%%100x100c%%);width:100px;height:100px;display:block;float:left;}
 
 /* 150x150a 'motes. */
@@ -508,7 +508,7 @@ a[href|="/thespittening"], a[href|="/goodkingsombra"], a[href|="/derpymouse"], a
 {background-image:url(%%misfitsi%%);display:block;float:left;}
 
 /* Misfits j */
-a[href|="/zecoraspooky"], a[href|="/zecorabored"], a[href|="/zecoramagicdust"], a[href|="/fillyzecora"], a[href|="/openfire"], a[href|="/tavimafiaopenfire"], a[href|="/blamemysister"], a[href|="/youbetchya"], a[href|="/cadstare"], a[href|="/cadoops"], a[href|="/whyhellothere"], a[href|="/zecoradisapproves"], a[href|="/zecorabutt"], a[href|="/equestriagrills"], a[href|="/mallcop"], a[href|="/piesaurus"], a[href|="/karmacannon"], a[href|="/majesticsombra"], a[href|="/kingsomblaaaaa"], a[href|="/twisci"], a[href|="/eggplantsparkle"], a[href|="/sunsetlick"], a[href|="/sunsetagain"], a[href|="/sunsetbat"]
+a[href|="/zecoraspooky"], a[href|="/zecorabored"], a[href|="/zecoramagicdust"], a[href|="/fillyzecora"], a[href|="/openfire"], a[href|="/tavimafiaopenfire"], a[href|="/blamemysister"], a[href|="/youbetchya"], a[href|="/cadstare"], a[href|="/cadoops"], a[href|="/whyhellothere"], a[href|="/zecoradisapproves"], a[href|="/zecorabutt"], a[href|="/equestriagrills"], a[href|="/mallcop"], a[href|="/piesaurus"], a[href|="/karmacannon"], a[href|="/majesticsombra"], a[href|="/kingsomblaaaaa"], a[href|="/twisci"], a[href|="/eggplantsparkle"], a[href|="/sunsetlick"], a[href|="/sunsetagain"], a[href|="/sunsetbat"], a[href|="/sunsetbook"], a[href|="/nursetwi"], a[href|="/twinurse2"]
 {background-image:url(%%misfitsj%%);display:block;float:left;}
 
 /*
@@ -524,7 +524,7 @@ a[href|="/twispike"], a[href|="/pinkiemail"], a[href|="/chibiluna"], a[href|="/a
 {background-position: -100% 0%;}
 
 /* Grid pos 2,0 'motes */
-a[href|="/shiningcadancehug"], a[href|="/obsessivetrixie"], a[href|="/trixiebeingcreepy"], a[href|="/twicider"], a[href|="/rainbowstache"], a[href|="/sparklelove"], a[href|="/libwawy"], a[href|="/ohgoditstoocute"], a[href|="/applewat"], a[href|="/proletariat"], a[href|="/pikachu"], a[href|="/sursilly"], a[href|="/cadsoawesome"]
+a[href|="/shiningcadancehug"], a[href|="/obsessivetrixie"], a[href|="/trixiebeingcreepy"], a[href|="/twicider"], a[href|="/rainbowstache"], a[href|="/sparklelove"], a[href|="/libwawy"], a[href|="/ohgoditstoocute"], a[href|="/applewat"], a[href|="/proletariat"], a[href|="/pikachu"], a[href|="/sursilly"], a[href|="/cadsoawesome"], a[href|="/wheredidthemuffingo"]
 {background-position: -200% 0%;}
 
 /* Grid pos 0,1 'motes */
@@ -1161,3 +1161,5 @@ a[href|="/eggplantsparkle"] {width:112px;height:150px;background-position: -326p
 a[href|="/sunsetlick"] {width:74px;height:100px;background-position: -252px -574px;}
 a[href|="/sunsetagain"] {width:86px;height:100px;background-position: 0 -607px;}
 a[href|="/sunsetbat"] {width:168px;height:150px;background-position: -438px -478px;}
+a[href|="/sunsetbook"] {width:150px;height:115px;background-position: -86px -607px;}
+a[href|="/nursetwi"], a[href|="/twinurse2"] {width:74px;height:150px;background-position: -606px -450px;}
