--- a/source-css/spanishmeerkat.css
+++ b/source-css/spanishmeerkat.css
@@ -953,7 +953,7 @@ a[href|="/pinkieistiredofyourshit"] {width:150px;height:149px;background-positio
 
 /* Normal Spritesheet 3 */
 
-a[href|="/rainbowderp"], a[href|="/maudfun"], a[href|="/applegasm"], a[href|="/zecorawooo"], a[href|="/navydash"], a[href|="/navymeerkat"], a[href|="/surpriseddash"], a[href|="/rainbowyeah"], a[href|="/pinkietongue"], a[href|="/ionlywatchitfortheplot"], a[href|="/bedroomeyes"], a[href|="/chryssismile"], a[href|="/empressfluttershy"], a[href|="/fluttermistress"], a[href|="/computertwi"], a[href|="/scootaserious"], a[href|="/bedtwi"], a[href|="/fillynmm"]
+a[href|="/rainbowderp"], a[href|="/maudfun"], a[href|="/applegasm"], a[href|="/zecorawooo"], a[href|="/navydash"], a[href|="/navymeerkat"], a[href|="/surpriseddash"], a[href|="/rainbowyeah"], a[href|="/pinkietongue"], a[href|="/ionlywatchitfortheplot"], a[href|="/bedroomeyes"], a[href|="/chryssismile"], a[href|="/empressfluttershy"], a[href|="/fluttermistress"], a[href|="/computertwi"], a[href|="/scootaserious"], a[href|="/bedtwi"], a[href|="/fillynmm"], a[href|="/tiarascrunch"], a[href|="/ajseriously"], a[href|="/tswingboner"], a[href|="/babsderp"], a[href|="/constibab"]
 {background-image:url(%%normal-spritesheet3%%);display:block;float:left;}
 
 a[href|="/rainbowderp"] {width:131px;height:150px;}
@@ -970,6 +970,10 @@ a[href|="/computertwi"] {width:249px;height:200px;background-position: -567px -1
 a[href|="/scootaserious"] {width:127px;height:150px;background-position: -809px 0;}
 a[href|="/bedtwi"] {width:144px;height:200px;background-position: -816px -150px;}
 a[href|="/fillynmm"] {width:75px;height:70px;background-position: 0 -650px;}
+a[href|="/tiarascrunch"] {width:108px;height:150px;background-position: 0 -720px;}
+a[href|="/ajseriously"] {width:136px;height:150px;background-position: -108px -720px;}
+a[href|="/tswingboner"] {width:179px;height:200px;background-position: -177px -350px;}
+a[href|="/babsderp"], a[href|="/constibab"] {width:191px;height:200px;background-position: -356px -350px;}
 
 /* End of Normal Spritesheet 3 */
 
@@ -998,6 +1002,22 @@ a[href|="/ajuberpout"] {width:121px;height:160px;background-position: -242px -16
 
 /* End of Pout Spritesheet */
 
+/* Munch Spritesheet (CMC munches will not go here for order's sake) */
+
+a[href|="/cadmunch"], a[href|="/dashiemunch"], a[href|="/twimunch"], a[href|="/twilymunch"], a[href|="/ajmunch"], a[href|="/rarimunch"], a[href|="/applemunch"], a[href|="/scootamunch"], a[href|="/sweetiemunch"], a[href|="/fluttermunch"]
+{background-image:url(%%munch-spritesheet%%);display:block;float:left;}
+
+a[href|="/cadmunch"] {width:182px;height:235px;}
+a[href|="/twimunch"], a[href|="/twilymunch"] {width:210px;height:235px;background-position: -182px 0;}
+a[href|="/dashiemunch"] {width:179px;height:235px;background-position: -392px 0px;}
+a[href|="/ajmunch"] {width:169px;height:235px;background-position: -571px 0;}
+a[href|="/rarimunch"] {width:213px;height:235px;background-position: -740px 0;}
+a[href|="/applemunch"] {width:185px;height:235px;background-position: 0 -235px;}
+a[href|="/scootamunch"] {width:211px;height:235px;background-position: -185px -235px;}
+a[href|="/sweetiemunch"] {width:197px;height:235px;background-position: -396px -235px;}
+a[href|="/fluttermunch"] {width:208px;height:235px;background-position: -593px -235px;}
+
+/* End of Munch Spritesheet */
 
 /* Single Emotes */
 
