--- a/source-css/clopmotes.css
+++ b/source-css/clopmotes.css
@@ -348,8 +348,12 @@ a[href|="/shykisscock"]
 a[href|="/cheesesocks"], a[href|="/festivebuttplug"], a[href|="/wetqueen"], a[href|="/doublemoon"], a[href|="/wetmoons"], a[href|="/kissmyass"], a[href|="/tiapresenting"], a[href|="/creammuffin"], a[href|="/sexygaming"], a[href|="/pm"], a[href|="/cadancebj"]
 {background-image:url(%%200x200a%%);width:200px;height:200px;display:block;float:left;}
 
+/* b200x200b 'motes. */
+a[href|="/dirtypinkie"]
+{background-image:url(%%b200x200b%%);width:200px;height:200px;display:block;float:left;}
+
 /* 250x250a 'motes. */
-a[href|="/plotpair"], a[href|="/lickusclean"]
+a[href|="/plotpair"], a[href|="/lickusclean"], a[href|="/tootight"]
 {background-image:url(%%250x250a%%);width:250px;height:250px;display:block;float:left;}
 
 /* 300x300a 'motes */
@@ -357,7 +361,7 @@ a[href|="/example6"]
 {background-image:url(%%300x300a%%);width:300px;height:300px;display:block;float:left;}
 
 /* Grid pos 0,0 'motes. Not needed but for completeness... */
-a[href|="/examplecode1"], a[href|="/examplecode2"], a[href|="/shykisscock"],a[href|="/cheesesocks"], a[href|="/plotpair"], a[href|="/examplecode6"] 
+a[href|="/examplecode1"], a[href|="/examplecode2"], a[href|="/shykisscock"],a[href|="/cheesesocks"], a[href|="/plotpair"],a[href|="/examplecode6"] 
 {background-position: 0 0;}
 
 /* Grid pos 1,0 'motes */
@@ -365,7 +369,7 @@ a[href|="/festivebuttplug"], a[href|="/lickusclean"]
 {background-position: -100% 0%;}
 
 /* Grid pos 2,0 'motes */
-a[href|="/wetqueen"]
+a[href|="/wetqueen"], a[href|="/tootight"]
 {background-position: -200% 0%;}
 
 /* Grid pos 0,1 'motes */
@@ -381,7 +385,7 @@ a[href|="/kissmyass"]
 {background-position: -200% -100%;}
 
 /* Grid pos 0,2 'motes */
-a[href|="/tiapresenting"]
+a[href|="/tiapresenting"], 
 {background-position: 0% -200%;}
 
 /* Grid pos 1,2 'motes */
@@ -393,7 +397,7 @@ a[href|="/sexygaming"]
 {background-position: -200% -200%;}
 
 /* Grid pos 0,3 'motes */
-a[href|="/pm"]
+a[href|="/pm"],
 {background-position: 0% -300%;}
 
 /* Grid pos 1,3 'motes */
@@ -409,7 +413,7 @@ a[href|="/nmmbj"], a[href|="/nmmbent"], a[href|="/applesocks"], a[href|="/sunand
 {background-image:url(%%misfitsb%%);display:block;float:left;}
 
 /* Misfits c */
-a[href|="/smugass"], a[href|="/cellyshy"], a[href|="/mistletoe"], a[href|="/piledriver"], a[href|="/sisterlylove"]
+a[href|="/smugass"], a[href|="/cellyshy"], a[href|="/mistletoe"], a[href|="/piledriver"], a[href|="/sisterlylove"], a[href|="/twisockspresenting"], a[href|="/chinesenewyear"], a[href|="/bringingsexyrap"], a[href|="/rainbowmaid"]
 {background-image:url(%%misfitsc%%);display:block;float:left;}
 
 
@@ -439,3 +443,7 @@ a[href|="/cellyshy"] {width: 235px;height:250px;background-position: 0px -200px;
 a[href|="/mistletoe"] {width: 171px;height:200px;background-position: 0px -450px;}
 a[href|="/piledriver"] {width: 214px;height:250px;background-position: 0px -650px;}
 a[href|="/sisterlylove"] {width: 200px;height:150px;background-position: -164px 0px;}
+a[href|="/twisockspresenting"] {width: 200px;height:98px;background-position: -235px -150px;}
+a[href|="/rainbowmaid"] {width: 190px;height:200px;background-position: -171px -450px;}
+a[href|="/bringingsexyrap"] {width: 167px;height:250px;background-position: -214px -650px;}
+a[href|="/chinesenewyear"] {width: 160px;height:200px;background-position: -235px -242px;}
