--- a/source-css/flutterlounge.css
+++ b/source-css/flutterlounge.css
@@ -249,7 +249,7 @@ a[href|="/flutterboo"] {
  
 /* NEW EMOTES LESGOOOOOO */
 
-a[href|="/sleepytwi"], a[href|="/twinap"], a[href|="/twibutt"], a[href|="/twishyhi"], a[href|="/bashfultwilight"], a[href|="/twiwah"], a[href|="/coylight"], a[href|="/twifuzzy"], a[href|="/pretzeltwi"], a[href|="/whome"], a[href|="/whyamisosquisheh"], a[href|="/facewing"], a[href|="/no"], a[href|="/happyflutterbat"], a[href|="/itstheperfectplan"], a[href|="/twiohyou"], a[href|="/teeheelight"],
+a[href|="/sleepytwi"], a[href|="/twinap"], a[href|="/twibutt"], a[href|="/twishyhi"], a[href|="/twishy4"], a[href|="/mei4"], a[href|="/bashfultwilight"], a[href|="/twiwah"], a[href|="/coylight"], a[href|="/twifuzzy"], a[href|="/pretzeltwi"], a[href|="/whome"], a[href|="/whyamisosquisheh"], a[href|="/facewing"], a[href|="/no"], a[href|="/happyflutterbat"], a[href|="/itstheperfectplan"], a[href|="/twiohyou"], a[href|="/teeheelight"],
 a[href|="/fuzzytwi"], a[href|="/twisocks"], a[href|="/pretzellove"], a[href|="/twime"], a[href|="/whyamisosquishy"], 
 a[href|="/twiugh"], a[href|="/happybat"], a[href|="/twihano"], a[href|="/twiveryyes"], a[href|="/twishh"], 
 a[href|="/twiheehee"]
